[gd_scene load_steps=9 format=3 uid="uid://deak8eqq18tgd"]

[ext_resource type="Script" path="res://Artillery/artillery.gd" id="1_h7y1k"]
[ext_resource type="Texture2D" uid="uid://bjj1ul7rttkok" path="res://Textures/artilleryWheel.png" id="2_dc08h"]
[ext_resource type="Texture2D" uid="uid://svrlv6i358oi" path="res://Textures/artilleryBarrel.png" id="3_o6xvk"]
[ext_resource type="Texture2D" uid="uid://cvpdnsr80siv8" path="res://Textures/artilleryRing.png" id="4_lk51x"]
[ext_resource type="AudioStream" uid="uid://b3qbmentdd4d0" path="res://audio/EFX EXT .38 Plus Power Shots 04 B.wav" id="5_y5pro"]

[sub_resource type="Curve" id="Curve_a18gn"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.99, 0.254302), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_duorv"]
curve = SubResource("Curve_a18gn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vg42c"]
particle_flag_disable_z = true
spread = 170.327
initial_velocity_min = 300.0
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
scale_min = 30.0
scale_max = 40.0
scale_curve = SubResource("CurveTexture_duorv")

[node name="Artillery" type="Node2D"]
script = ExtResource("1_h7y1k")

[node name="Wheel" type="Sprite2D" parent="."]
texture = ExtResource("2_dc08h")

[node name="Barrel" type="Sprite2D" parent="Wheel"]
texture = ExtResource("3_o6xvk")

[node name="Ring" type="Sprite2D" parent="Wheel/Barrel"]
position = Vector2(-594, -133)
rotation = -3.83972
texture = ExtResource("4_lk51x")

[node name="Node2D" type="Node2D" parent="Wheel/Barrel"]
position = Vector2(809, -136)

[node name="GPUParticles2D" type="GPUParticles2D" parent="Wheel/Barrel"]
z_index = 3
position = Vector2(812, -133)
emitting = false
amount = 60
process_material = SubResource("ParticleProcessMaterial_vg42c")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[node name="Angle" type="HSlider" parent="."]
offset_left = -434.0
offset_top = -695.0
offset_right = 434.0
offset_bottom = -605.0
min_value = -50.0
max_value = 90.0
step = 0.0

[node name="Force" type="HSlider" parent="."]
offset_left = -433.0
offset_top = -572.0
offset_right = 435.0
offset_bottom = -482.0
max_value = 50.0
step = 0.0

[node name="Button" type="Button" parent="."]
offset_left = 512.0
offset_top = -665.0
offset_right = 956.0
offset_bottom = -491.0
theme_override_font_sizes/font_size = 106
text = "Fire!"

[node name="AngleText" type="Label" parent="."]
offset_left = -653.0
offset_top = -673.0
offset_right = -477.0
offset_bottom = -619.0
theme_override_font_sizes/font_size = 36
text = "Uwu"

[node name="InitVText" type="Label" parent="."]
offset_left = -654.0
offset_top = -552.0
offset_right = -460.0
offset_bottom = -499.0
theme_override_font_sizes/font_size = 36
text = "uwu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_y5pro")
volume_db = 8.0

[connection signal="value_changed" from="Angle" to="." method="_on_angle_value_changed"]
[connection signal="value_changed" from="Force" to="." method="_on_force_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
